2009-02-18  Marek Habersack  <mhabersack@novell.com>

	* UrlPattern.cs: TrySubstitute now gets the collection of default
	values and uses it to replace url segments instead of failing when
	the passed values collection is missing a segment.
	Do not use the tokens array in Match.

	* RouteCollection.cs: check if name is null or empty, not just
	null in GetVirtualPath

	* Route.cs: url.TrySubstitute should be passed the defaults
	collection when called from GetVirtualPath

2009-02-14  Marek Habersack  <mhabersack@novell.com>

	* UrlPattern.cs: use the defaults collection when matching a path
	and segments are missing.

	* RouteCollection.cs: GetRouteData must use VirtualPathProvider
	to check for virtual path existence.

2008-10-23  Atsushi Enomoto  <atsushi@ximian.com>

	* UrlPattern.cs : fixed possible out-of-range case ("tableName/" in
	  DynamicData).

2008-10-17  Atsushi Enomoto  <atsushi@ximian.com>

	* RouteValueDictionary.cs : its string comparison is case
	  insensitive.

2008-10-17  Atsushi Enomoto  <atsushi@ximian.com>

	* UrlPattern.cs : fixed pattern match for such string that has
	  suffix. (DynamicData uses it.)

2008-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* RouteValueDictionary.cs : object argument is actually for
	  anonymous type instance.

2008-10-10  Atsushi Enomoto  <atsushi@ximian.com>

	* UrlRoutingModule.cs : implement PostMapRequestHandler() and 
	  PostResolveRequestCache() to work correctly in order.
	  Now it should practically work.

2008-09-18  Atsushi Enomoto  <atsushi@ximian.com>

	* UrlRoutingModule.cs, RouteCollection.cs :
	  handle RouteExistingFiles.

2008-09-18  Atsushi Enomoto  <atsushi@ximian.com>

	* Route.cs : reject invalid constraint.
	* UrlRoutingHandler.cs : more ProcessRequest() impl.
	* UrlRoutingModule.cs : note.

2008-09-17  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpMethodConstraint.cs, Route.cs, RouteCollection.cs,
	  UrlPattern.cs, UrlRoutingModule.cs:
	  ongoing UrlRoutingModule implementation.
